# surf

./: .gitignore  AGENTS.md  LICENSE  PROMPT.md  README.md  README_zh.md  SPECIAL_SITES.md  SPECIAL_SITES_zh.md  TODO  config.ini.example  pyproject.toml  requirements.txt  special_parser.md  surf.py  surf_git.py  surf_web.py  test_paddleocr_integration.py  wsgi.py
tests/: Merged Test.md  debug_archiveis.py  smoke_test_paywall.py  test_antibot_challenge.py  test_archive_metadata.py  test_douban_auth.py  test_douban_topic_metadata.py  test_frontmatter_title_format.py  test_interrupt_handling.py  test_llm_provider_case_insensitive.py  test_network_diagnostics.py  test_paywall_detection.py  test_proxy_config_fallback.py  test_reddit.py  test_short_url_resolution.py  test_stdout_output.py  test_surf_web_direct_markdown.py  test_surf_web_import.py  test_translation_language_guard.py  test_twitter_fxapi.py  test_v2ex_topic.py  test_web_text_posts.py  test_wired_paywall.py  test_zhihu_metadata.py
