[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surf"
version = "1.1.2.27"
description = "A powerful Python CLI tool that converts web pages into clean Markdown or PDF files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "dodorz"}
]

keywords = ["url", "markdown", "pdf", "web-scraper", "converter", "llm", "translation", "tts"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
]

dependencies = [
    "playwright",
    "readability-lxml",
    "markdownify",
    "langdetect",
    "openai",
    "markdown",
    "requests",
    "beautifulsoup4",
    "edge-tts",
    "playsound==1.2.2",
    "trafilatura",
    "python-dateutil",
    "flask",
    "lxml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.990",
]

[project.urls]
Homepage = "https://github.com/dodorz/surf"
Repository = "https://github.com/dodorz/surf.git"
Issues = "https://github.com/dodorz/surf/issues"

[project.scripts]
surf = "surf:main"

[tool.setuptools]
py-modules = ["surf"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "dateutil.*",
    "markdown.*",
]
ignore_missing_imports = true
